--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <p>Hi</p>
 <p>I am Ziyi Zhang, this is my personal webpage. </p>
-<p>If you have please feel free to contact me. </p>
+<p>If you have please feel free to contact me. Thank you!</p>
